--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'io.github.netmikey.mvncloner'
-version = '1.0.3-SNAPSHOT'
+version = '1.0.4'
 sourceCompatibility = '11'
 
 repositories {
